Added DataFileValue to SetEqualityIterator checks in conditional mutations
Fixes #3522